# precision-mouse-filter-exe-

./: BUG_FIXES.md  BUILD_GUIDE.md  CMakeLists.txt  CMakePresets.json  COMO_COMPILAR.md  DESIGN_REVIEW.md  README.md
.github/workflows/: build.yml
include/: ConfigManager.h  HotkeyManager.h  InputEngine.h  MainWindow.h  MetricsMonitor.h  MouseFilterPipeline.h  OneEuroFilter.h  SharedState.h  resource.h
resources/: app.manifest  app.rc
src/: ConfigManager.cpp  HotkeyManager.cpp  InputEngine.cpp  MainWindow.cpp  MetricsMonitor.cpp  MouseFilterPipeline.cpp  main.cpp
